tests/baselines/reference/propertyNamesWithStringLiteral.errors.txt
propertyNamesWithStringLiteral.ts(10,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== propertyNamesWithStringLiteral.ts (1 errors) ====
    class _Color {
        a: number; r: number; g: number; b: number;
    }
    
    interface NamedColors {
        azure: _Color;
        "blue": _Color;
        "pale blue": _Color;
    }
    module Color {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var namedColors: NamedColors;
    }
    var a = Color.namedColors["azure"];
    var a = Color.namedColors.blue; // Should not error
    var a = Color.namedColors["pale blue"]; // should not error
    